Fix #31556: cycles object info random value was not properly randomized for dupligroups.